# SmartGateway_HL_Mando

./: .clangd  .gitignore  CMakeLists.txt  Kconfig  build.bat  build_cmake.bat  build_evb_maya_w166.bat  build_full.txt  prj.conf  prj_eth_only_test.conf  prj_wifi_only_test.conf  prj_wifi_wpa3_transition.conf  smartgw_connect.example.txt
boards/: SmartGateway.code-workspace  frdm_mcxn947_mcxn947_cpu0.eth_only_no_wifi.overlay  frdm_mcxn947_mcxn947_cpu0.overlay  frdm_mcxn947_mcxn947_cpu0.wifi_test_no_eth.overlay
docs/: ADC_MINMAX_ALGORITHM.md  ADC_기능_문서.md  CMake_빌드_가이드.md  RELEASE_v2.0.0_TEST_DEMO.md  SYSTEM_TASK_ARCHITECTURE.md  TASK_THREAD_DESIGN_AND_ROADMAP.md  TCP_MODBUS_GATEWAY.md  UDP_Task_설계.md  USB_GAS_SENSOR.md  USB_GAS_SENSOR_SW_DETAIL.md  smartgateway_implementation.md  wifi_development.md
src/: SmartGateway.code-workspace  adc.c  adc.h  config_nvs.c  config_nvs.h  di_do.c  di_do.h  dip_switch.c  dip_switch.h  ftdi_usb.c  ftdi_usb.h  gas_sensor.c  gas_sensor.h  gw_error.c  gw_error.h  main.c  msgpack_adc.c  msgpack_adc.h  network_manager.c  network_manager.h  rs232.c  rs232.h  sync_gate.c  sync_gate.h  syslog_wifi.c  syslog_wifi.h  tcp_gateway.c  tcp_gateway.h  time_helper.c  time_helper.h  udp.c  udp.h  wifi_manager.c  wifi_manager.h
tools/: udp_receiver.py
